--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,26 @@
-# Configuration de la source de données H2 (base de données en mémoire pour le développement)
-spring.datasource.url=jdbc:h2:mem:cvdb
+spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
-# Configuration JPA (Java Persistence API) - Entités et schéma
-spring.jpa.hibernate.ddl-auto=update
+# Configuration JPA (Java Persistence API) - Entites et schema
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-# Configuration de Spring Security (à personnaliser pour une utilisation réelle)
-spring.security.user.name=user
-spring.security.user.password=password
+# Configuration de Spring Security (a personnaliser pour une utilisation reelle)
+#spring.security.user.name=user
+#spring.security.user.password=password
 
 # Configuration du serveur Web
 server.port=8080
-server.servlet.context-path=/cv-app
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # Gestion de la session (exemple : session stateless pour une API REST)
 #server.servlet.session.cookie.name=cv-session
 #server.servlet.session.timeout=15m
 #server.servlet.session.persistent=false
+
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
