--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
