--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 
 # Configuration JPA (Java Persistence API) - Entites et schema
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
 # Configuration de Spring Security (a personnaliser pour une utilisation reelle)
 #spring.security.user.name=user
