--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <version>3.2.19</version>
         </dependency>
         <!-- Pour Axios -->
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
 
     </dependencies>
